solved the lap and did the Stretch goal

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
     flex-direction: column;
     justify-content: space-between;
     gap: 30px;
+    font-family: cursive;
+
 }
 
 header {
@@ -17,6 +19,7 @@ header {
 
 header img {
     width: 40px;
+    border-radius: 10px;
 
 }
 
@@ -33,8 +36,81 @@ main {
     justify-content: center;
     align-self: center;
     align-items: center;
+    gap: 40px;
     
    
+}
+
+#Administration {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.container1 {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: aqua;
+    align-items: center;
+    box-shadow: -4px -2px 15px 3px black;
+    padding: 10px;
+
+}
+
+#Marketing {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.container2 {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: rgb(0, 255, 4);
+    align-items: center;
+    box-shadow: -4px -2px 15px 3px black;
+    padding: 10px;
+
+
+
+}
+
+#Development {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.container3 {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: rgb(229, 255, 0);
+    align-items: center;
+    box-shadow: -4px -2px 15px 3px black;
+    padding: 10px;
+
+
+}
+
+#Finance {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.container4 {
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    background-color: rgb(162, 0, 255);
+    align-items: center;
+    box-shadow: -4px -2px 15px 3px black;
+    padding: 10px;
+
+
 }
 
 
